--- a/mmbx/content/css/elements.css
+++ b/mmbx/content/css/elements.css
@@ -751,6 +751,7 @@
 }
 
 .cube-item-color {
+    display: flex;
     width: 100%;
     height: 100%;
     border-radius: var(--border-float-radius);
