--- a/mmbx/content/css/elements.css
+++ b/mmbx/content/css/elements.css
@@ -1052,8 +1052,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     top: 5px;
     right: -15px;
     display: block;
-    width: 30;
-    height: 30;
+    width: 30px;
+    height: 30px;
     border-color: var(--color-text-05);
     border-width: 0 1px 1px 0;
     border-style: solid;
@@ -1068,8 +1068,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     top: 5px;
     right: 13px;
     display: block;
-    width: 30;
-    height: 30;
+    width: 30px;
+    height: 30px;
     border-color: var(--color-text-05);
     border-width: 0 1px 1px 0;
     border-style: solid;
@@ -2137,8 +2137,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 
 .pop_up-title-block .pop_up-close-button-div {
     position: absolute;
-    top: -5;
-    right: -4;
+    top: -5px;
+    right: -4px;
 }
 
 .pop_up-title-block .pop_up-close-button-div .close_button-wrap {
