split button attribut in two type: color and standard style

--- a/versions/v0.2/mmbx/content/css/elements.css
+++ b/versions/v0.2/mmbx/content/css/elements.css
@@ -691,9 +691,92 @@
 
 /*————————————————————— STICKERS UP —————————————————————*/
 
-/*————————————————————— GREEN-BUTTON DOWN —————————————————*/
+/*————————————————————— COLOR BUTTON DOWN ———————————————————————————————————*/
+
+/* .blue-button {
+    color: var(--color-blue_esi);
+    background-color: var(--color-white);
+    border: var(--color-blue_esi) 1px solid;
+}
+
+.blue-button:hover {
+    color: var(--color-white);
+    background-color: var(--color-blue_esi);
+    border: var(--color-blue_esi) 1px;
+}
+
+.red-button {
+    color: var(--color-red);
+    background-color: var(--color-white);
+    border: var(--color-red) 1px solid;
+}
+
+.red-button:hover {
+    color: var(--color-white);
+    background-color: var(--color-red);
+    border: var(--color-red) 1px;
+}
+
+.orange-button {
+    color: var(--color-orange);
+    background-color: var(--color-white);
+    border: var(--color-orange) 1px solid;
+}
+
+.orange-button:hover {
+    color: var(--color-white);
+    background-color: var(--color-orange);
+    border: var(--color-orange) 1px;
+} */
 
 .green-button {
+    color: var(--color-green);
+    background-color: var(--color-white);
+    border: var(--color-green) 1px solid;
+}
+
+.green-button:hover {
+    color: var(--color-white);
+    background-color: var(--color-green);
+    border: var(--color-green) 1px;
+}
+
+/* .green-desabled {
+    color: var(--color-green-02) !important;
+    cursor: initial;
+}
+
+.green-desabled::after {
+    border-color: var(--color-green-02) !important;
+} */
+
+/*————————————————————— COLOR BUTTON UP —————————————————————————————————————*/
+
+/*————————————————————— STADARD-BUTTON DOWN —————————————————————————————————*/
+
+.standard-button {
+    width: 100%;
+    height: 33px;
+    border-radius: var(--border-float-radius);
+    text-transform: capitalize;
+    box-shadow: var(--box-shadow);
+    transition: var(--transition-time);
+    -moz-transition: var(--transition-time);
+    cursor: pointer;
+}
+
+.standard-button:hover {
+    border: double;
+    transition: var(--transition-time);
+    -moz-transition: var(--transition-time);
+}
+
+.standard-button-desabled {
+    opacity: .2;
+    cursor: initial;
+}
+
+/* .green-button {
     width: 100%;
     height: 33px;
     border-radius: var(--border-float-radius);
@@ -714,12 +797,12 @@
     border: double;
     transition: var(--transition-time);
     -moz-transition: var(--transition-time);
-}
+} */
 
-.btn-loading {
-    /* display: none; */
-    /* display: flex !important; */
-}
+/* .btn-loading {
+    display: none;
+    display: flex !important;
+} */
 
 .btn-loading img {
     width: auto !important;
@@ -727,7 +810,7 @@
     margin: auto;
 }
 
-/*————————————————————— GREEN-BUTTON UP —————————————————*/
+/*————————————————————— STADARD-BUTTON UP ———————————————————————————————————*/
 
 /*————————————————————— GREEN-ARROW DOWN —————————————————*/
 
@@ -758,15 +841,6 @@
     pointer-events: none;
     transform: rotate(-45deg);
     cursor: pointer;
-}
-
-.green-arrow-desabled {
-    color: var(--color-green-02) !important;
-    cursor: initial;
-}
-
-.green-arrow-desabled::after {
-    border-color: var(--color-green-02) !important;
 }
 
 /*————————————————————— GREEN-ARROW-BUTTON UP —————————————————*/
@@ -2244,6 +2318,12 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     margin-left: auto;
     right: 3px;
 }
+/*++++ SELECT DOWN +++*/
+.popup-selected{
+    box-shadow: var(--selected-shadow) !important;
+    z-index: 5;
+}
+/*++++ SELECT UP +++++*/
 
 /*—————————————————————————————— POP UP UP ——————————————————————————————————*/
 
