--- a/versions/v0.2/mmbx/content/css/elements.css
+++ b/versions/v0.2/mmbx/content/css/elements.css
@@ -2207,9 +2207,11 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 #full_screen_div {
     display: none;
     position: fixed;
-    width: 100vw;
-    height: 100vh;
-    padding: 10px 0;
+    /* width: 100vw;
+    height: 100vh; */
+    width: 100%;
+    height: 100%;
+    /* padding: 10px 0; */
     top: 0;
     left: 0;
     color: var(--color-text);
@@ -2221,16 +2223,17 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 #full_screen_div .pop_up-container {
     /* display: flex; */
     display: none;
+    width: 100%;
     height: 100%;
     /* margin: auto 0; */
 }
 
 .pop_up-wrap {
     /* display: none; */
-    display: flex;
-    margin: auto;
+    /* display: flex;
+    margin: auto; */
     /* position: fixed; */
-    width: 100vw;
+    /* width: 100vw; */
     /* height: 100vh; */
     /* height: 100%; */
     /* padding: 10px 0; */
@@ -2240,16 +2243,23 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     /* backdrop-filter: blur(10px); */
     /* -webkit-backdrop-filter: blur(10px); */
     /* z-index: 100; */
+    /* display: block; */
+    position: relative;
+    margin: auto;
+    width: 100%;
+    /* height: 90%; */
+    max-width: 70%;
 }
 
 .pop_up-window {
     position: relative;
-    width: 50%;
-    max-height: 90vh;
+    /* width: 50%;
+    max-height: 90vh; */
+    height: 100%;
     /* overflow: auto; */
-    overflow: auto;
+    overflow: hidden;
     margin: auto;
-    padding: 10px;
+    /* padding: 10px; */
     background-color: var(--color-white);
     border-radius: var(--border-float-radius);
     border: var(--border-float);
@@ -2260,11 +2270,17 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 
 .pop_up-inner {
     position: relative;
-    z-index: 100;
+    height: 100%;
+    /* z-index: 100; */
 }
 
 .pop_up-title-block {
     position: relative;
+    display: flex;
+    top: 0;
+    width: 100%;
+    padding: 10px 10px 0;
+    height: 6%;
     color: var(--color-text-05);
     font-size: var(--middle-size);
     font-family: var(--main-font-family);
@@ -2280,9 +2296,10 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 }
 
 .pop_up-title-block .pop_up-close-button-div {
-    position: absolute;
-    top: -5px;
-    right: -4px;
+    position: relative;
+    /* top: -5px;
+    right: -4px; */
+    margin-left: auto;
 }
 
 .pop_up-title-block .pop_up-close-button-div .close_button-wrap {
@@ -2291,19 +2308,26 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 
 .pop_up-wrap .pop_up-content-block {
     position: relative;
+    height: 90%;
 }
 
-/* .pop_up-content-block-inner{} */
+.pop_up-content-block-inner {
+    padding: 0 10px 25px;
+    height: 95%;
+    max-height: 75vh;
+    overflow: auto;
+    background-color: var(--color-white);
+}
 
-.popup-content-instruct-div{
+.popup-content-instruct-div {
     margin-bottom: 15px;
 }
 
-.popup-content-instruct::first-letter{
+.popup-content-instruct::first-letter {
     text-transform: capitalize;
 }
 
-.pop_up-content-block-inner .popup-add-btn-div{
+.pop_up-content-block-inner .popup-add-btn-div {
     max-width: 300px;
     margin: 35px auto 0;
     width: 60%;
@@ -2311,7 +2335,11 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 
 .pop_up-validate_button-div {
     display: flex;
-    margin-top: 20px;
+    /* margin-top: 20px; */
+    width: 100%;
+    height: 5%;
+    bottom: 0;
+    background-color: var(--color-white);
 }
 
 .pop_up-validate_button-div button {
@@ -2319,11 +2347,14 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     margin-left: auto;
     right: 3px;
 }
+
 /*++++ SELECT DOWN +++*/
-.popup-selected{
+
+.popup-selected {
     box-shadow: var(--selected-shadow) !important;
     z-index: 5;
 }
+
 /*++++ SELECT UP +++++*/
 
 /*—————————————————————————————— POP UP UP ——————————————————————————————————*/
@@ -2432,7 +2463,7 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     margin: 0 auto;
 }
 
-#box_pricing_window .pop_up-window{
+#box_pricing_window .pop_up-window {
     width: 90%;
 }
 
