--- a/versions/v0.2/mmbx/content/css/header.css
+++ b/versions/v0.2/mmbx/content/css/header.css
@@ -15,6 +15,7 @@
     --color-green-02: rgba(35, 203, 167, 0.2);
     --color-yellow: #FFD300;
     --color-yellow-07: rgba(255, 211, 0, 0.7);
+    --color-blue: #4DA3F5;
     /*———————————————————————————————— COLOR UP —————————————————————————————*/
     /*———————————————————————————————— FONT-FAMILY DOWN —————————————————————*/
     --main-font-family: 'Spartan', Verdana, Geneva, sans-serif;
