display size editor popup

--- a/versions/v0.2/mmbx/content/css/item.css
+++ b/versions/v0.2/mmbx/content/css/item.css
@@ -19,9 +19,9 @@
     padding: 10px 10px 15px;
 } */
 
-.product-size-customize-container .dropdown_checkbox-wrap .dropdown_checkbox-title {
+/* .product-size-customize-container .dropdown_checkbox-wrap .dropdown_checkbox-title {
     display: flex;
-}
+} */
 
 .product-size-customize-container .dropdown_checkbox-wrap .dropdown_checkbox-title .customize-price-block {
     margin-left: auto;
