--- a/versions/v0.2/mmbx/content/css/item.css
+++ b/versions/v0.2/mmbx/content/css/item.css
@@ -23,7 +23,7 @@
     display: flex;
 } */
 
-.product-size-customize-container .dropdown_checkbox-wrap .dropdown_checkbox-title .customize-price-block {
+.product-size-customize-container .dropdown_checkbox-wrap .customize-price-block {
     margin-left: auto;
     color: var(--color-text-05);
     text-transform: uppercase;
