display size editor dynamically

--- a/versions/v0.2/mmbx/content/css/item.css
+++ b/versions/v0.2/mmbx/content/css/item.css
@@ -70,7 +70,7 @@
     #choose_brand>p::first-letter {
         text-transform: capitalize;
     }
-    #choose_brand_button{
+    .choose-brand-button{
         box-shadow: none;
     }
     .product-datas-block .product-name-div span {
@@ -338,7 +338,7 @@
     #choose_brand>p::first-letter {
         text-transform: capitalize;
     }
-    #choose_brand_button{
+    #choose-brand-button{
         box-shadow: none;
     }
     .product-datas-block .product-name-div {
