--- a/versions/v0.2/mmbx/content/css/cart.css
+++ b/versions/v0.2/mmbx/content/css/cart.css
@@ -15,6 +15,9 @@
         padding: 10px;
         /* border: olive 1px solid; */
     }
+    #shopping_bag {
+        position: relative;
+    }
     .cart_summary-div-container {
         width: 50%;
         padding: 10px;
@@ -40,6 +43,9 @@
         width: 100%;
         padding: 10px;
     }
+    #shopping_bag {
+        position: relative;
+    }
     .cart_summary-div-container {
         padding: 10px;
     }
@@ -49,7 +55,6 @@
     /* .li-cart-element-container {
         margin-bottom: 30px;
     } */
-
     /* @media (max-width: 600px) {
         .li-cart-element-container {
             margin-bottom: 30px;
@@ -126,5 +131,4 @@
             display: none;
         }
     } */
-
 }
