display the checkout dynamically

--- a/versions/v0.2/mmbx/content/css/checkout.css
+++ b/versions/v0.2/mmbx/content/css/checkout.css
@@ -92,7 +92,10 @@
     display: none;
 }
 
-.cart-block .cart-inner .cart-wrap{
+/* .cart-block .cart-inner .cart-wrap{
+    display: none;
+} */
+#checkout_cart{
     display: none;
 }
 
