--- a/versions/v0.2/mmbx/content/css/elements.css
+++ b/versions/v0.2/mmbx/content/css/elements.css
@@ -1417,8 +1417,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 }
 
 .cart-element-arrow-inner {
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
     margin: auto;
 }
 
@@ -1426,14 +1426,14 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     position: relative;
     width: 100%;
     height: 100%;
-    padding: 0;
+    padding: 5px;
     top: -5%;
     color: var(--color-text-05);
     text-transform: capitalize;
     border: 0;
     background-color: transparent;
     cursor: pointer;
-    transform: rotate(-45deg);
+    /* transform: rotate(-45deg); */
     transition: var(--transition-time);
     -moz-transition: var(--transition-time);
 }
@@ -1465,8 +1465,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
         margin: 0;
     }
     .box-wrap .cart-element-arrow-inner {
-        width: 15px;
-        height: 15px;
+        width: 35px;
+        height: 35px;
     }
     .box-wrap .box-product-set .cart-element-wrap {
         box-shadow: none;
@@ -1574,8 +1574,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
         margin: 0;
     }
     .box-wrap .cart-element-arrow-inner {
-        width: 15px;
-        height: 15px;
+        width: 35px;
+        height: 35px;
     }
     .box-wrap .box-product-set .cart-element-wrap {
         box-shadow: none;
@@ -1592,9 +1592,28 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 
 /*————————————————————— ARROW DOWN ————————————————————*/
 
+.arrow-element-container {
+    width: 15px;
+    height: 15px;
+    margin: auto;
+}
+/* 
+.arrow-element-wrap-rotated {
+} */
+/* .arrow-element-wrap-rotated {
+    width: 100%;
+    height: 100%;
+    transform: rotate(-45deg);
+    transition: var(--transition-time);
+    -moz-transition: var(--transition-time);
+} */
+
 .arrow-element-wrap {
     width: 100%;
     height: 100%;
+    transform: rotate(-45deg);
+    transition: var(--transition-time);
+    -moz-transition: var(--transition-time);
 }
 
 .arrow-element-wrap .arrow-span {
@@ -1603,6 +1622,14 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     height: 100%;
     border-width: 0 1px 1px 0;
     border-style: solid;
+}
+
+/* to add on wrapper: arrow-element-wrap */
+
+.arrow-element-open {
+    transform: rotate(45deg) !important;
+    transition: var(--transition-time);
+    -moz-transition: var(--transition-time);
 }
 
 /*————————————————————— ARROW UP ——————————————————————*/
@@ -1660,11 +1687,11 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     -moz-transition: var(--transition-time);
 }
 
-.summary-detail-arrow-open {
+/* .summary-detail-arrow-open {
     transform: rotate(45deg) !important;
     transition: var(--transition-time);
     -moz-transition: var(--transition-time);
-}
+} */
 
 .summary-detail-property-div .summary-detail-property-li {
     margin-bottom: 20px;
