display the Sign page

--- a/versions/v0.2/mmbx/content/css/checkout.css
+++ b/versions/v0.2/mmbx/content/css/checkout.css
@@ -16,9 +16,9 @@
     display: none;
 }
 
-.connection-container{
+/* .connection-container{
     margin-bottom: 50px;
-}
+} */
 
 .address-container .form-input-block{
     margin-bottom: 20px;
