add functionality to add new address

--- a/versions/v0.2/mmbx/content/css/checkout.css
+++ b/versions/v0.2/mmbx/content/css/checkout.css
@@ -9,6 +9,13 @@
     box-shadow: var(--box-shadow);
 }
 
+.address-wrap-inner{
+    position: relative;
+}
+#address_form_loading{
+    width: auto;
+}
+
 /* .connection-container{
     margin-bottom: 50px;
 } */
