display set of recorded addresses

--- a/versions/v0.2/mmbx/content/css/elements.css
+++ b/versions/v0.2/mmbx/content/css/elements.css
@@ -2805,3 +2805,8 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 }
 
 /*—————————————————————————————— SIZE_EDITOR_POP_UP UP ——————————————————————*/
+/*———————————————————————————————— ADDRESS-SET DOWN —————————————————————————*/
+.address-set .edit-block-external{
+    margin-left: auto;
+}
+/*———————————————————————————————— ADDRESS-SET UP ———————————————————————————*/
