add animation when add new address

--- a/versions/v0.2/mmbx/content/css/checkout.css
+++ b/versions/v0.2/mmbx/content/css/checkout.css
@@ -20,7 +20,7 @@
     margin-bottom: 50px;
 } */
 
-.address-container .form-input-block{
+.address-form-container .form-input-block{
     margin-bottom: 20px;
 }
 
